--- a/Challenge1/src/app/components/phones/phones.component.css
+++ b/Challenge1/src/app/components/phones/phones.component.css
@@ -1,15 +1,15 @@
 #parent {
   width: 100%;
   height: 400px;
-  margin: 300px 0;
+  margin: 0 0 100px 0;
   background: rgb(44,45,63);
   background-image: url("../../../assets/images/bg-pattern-circles.svg");
   background: -moz-linear-gradient(90deg, rgba(44,45,63,1) 0%, rgba(46,47,66,1) 43%, rgba(63,65,100,1) 100%);
   background: -webkit-linear-gradient(90deg, rgba(44,45,63,1) 0%, rgba(46,47,66,1) 43%, rgba(63,65,100,1) 100%);
   background-image: url("../../../assets/images/bg-pattern-circles.svg"), linear-gradient(90deg, rgba(44,45,63,1) 0%, rgba(46,47,66,1) 43%, rgba(63,65,100,1) 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#2c2d3f",endColorstr="#3f4164",GradientType=1);
-  background-repeat: no-repeat;
   background-position: left bottom;
+  background-repeat: no-repeat;
   font-family: Ubuntu, sans-serif;
   font-weight: 300;
   color: hsl(240, 2%, 79%);
@@ -36,6 +36,10 @@ h1 {
 }
 
 p {
-  width: 500px;
+  max-width: 500px;
   line-height: 30px;
+}
+
+img{
+  width: auto;
 }
