--- a/Challenge1/src/app/app.component.html
+++ b/Challenge1/src/app/app.component.html
@@ -1,8 +1,6 @@
 <div style="max-width: 1440px; width: 100%; border: 1px solid black">
 
-  <div style="width: 100%; height: 1000px">
-
-  </div>
+  <app-navbar></app-navbar>
   <app-editor></app-editor>
   <app-phones></app-phones>
   <app-laptop></app-laptop>
