--- a/Challenge1/src/app/components/navbar/navbar.component.html
+++ b/Challenge1/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,22 @@
-<p>navbar works!</p>
+<header>
+  <div id="bg-image">
+
+<!--    <div id="menu" style="border: 1px solid black; width: 100%; height: 100px; text-align: center;">-->
+<!--      placeholder-->
+<!--    </div>-->
+
+<!--    <app-mobile-menu></app-mobile-menu>-->
+    <app-desktop-menu></app-desktop-menu>
+
+    <div id="intro">
+      <h1>A modern publishing platform</h1>
+      <p>Grow your audience and build your online brand</p>
+      <div id="buttons">
+        <app-white-button [text]="startForFree"></app-white-button>
+        <app-red-button [text]="learnMore"></app-red-button>
+      </div>
+    </div>
+
+
+  </div>
+</header>
