--- a/Challenge1/src/app/components/editor/editor.component.mobile.css
+++ b/Challenge1/src/app/components/editor/editor.component.mobile.css
@@ -1,59 +1,49 @@
-@media (max-width: 1100px){
-  #desc{
+@media (max-width: 1300px) {
+  img {
+    height: 700px;
+  }
+}
+
+@media (max-width: 1100px) {
+  #desc {
     width: 900px;
   }
-  img{
-    transform: translateX(150px);
+
+  img {
+    transform: translateX(200px);
+    height: 700px;
   }
 
-  h1{
+  h1 {
     text-align: center;
   }
 
-  p{
+  p {
     text-align: center;
-  }
-
-}
-
-@media (max-width: 900px){
-  #desc{
-    width: 1000px;
-  }
-  img{
-    transform: translateX(100px);
-  }
-  p{
-    margin: 20px 50px 0 50px;
+    width: 100%;
   }
 }
 
-@media (max-width: 700px){
-  #responsive{
+
+@media (max-width: 1000px) {
+  #responsive {
     flex-direction: column-reverse;
-  }
-  #desc{
-    width: auto;
-    transform: translateX(0);
-  }
-  #desc p{
-    width: auto;
-  }
-  img{
-    transform: translateX(0);
+    align-items: center;
     width: 100%;
   }
 
-  #parent{
+  img {
+    transform: translateX(0);
     height: auto;
+    width: 100%;
   }
 
-  h1{
-    font-size: 25px;
+  #desc {
+    width: 100%;
+    transform: translateX(0);
   }
 
-  p{
-    margin: 20px 20px 0 20px;
+  p {
+    width: 100%;
   }
-
 }
