--- a/Challenge1/src/app/components/navbar/mobile-menu/mobile-menu.component.html
+++ b/Challenge1/src/app/components/navbar/mobile-menu/mobile-menu.component.html
@@ -1,5 +1,7 @@
 <nav id="mobile">
   <img src="assets/images/logo.svg" alt="logo">
-  <img [hidden]="!close_menu" (click)="close_menu = !close_menu" src="assets/images/icon-hamburger.svg" alt="hamburger" style="margin-right: 20px;">
-  <img [hidden]="close_menu" (click)="close_menu = !close_menu" src="assets/images/icon-close.svg" alt="close" style="margin-right: 20px;">
+  <img [hidden]="close_menu" (click)="close_menu = !close_menu" src="assets/images/icon-hamburger.svg" alt="hamburger" style="margin-right: 20px;">
+  <img [hidden]="!close_menu" (click)="close_menu = !close_menu" src="assets/images/icon-close.svg" alt="close" style="margin-right: 20px;">
+
 </nav>
+<app-menu-modal [hidden]="!close_menu"></app-menu-modal>
