--- a/Challenge1/src/app/components/navbar/mobile-menu/menu-modal/menu-modal.component.css
+++ b/Challenge1/src/app/components/navbar/mobile-menu/menu-modal/menu-modal.component.css
@@ -9,6 +9,8 @@
   margin-right: auto;
   width: 80vw;
   border-radius: 10px;
+  -webkit-box-shadow: 0px 6px 40px 4px #000000;
+  box-shadow: 0px 6px 40px 4px #000000;
 }
 
 hr {
@@ -17,7 +19,7 @@ hr {
 }
 
 #drop-down {
-  height: 300px; /* DELETE THIS SHIT */
+  margin: 20px 0;
 }
 
 #buttons {
