--- a/Challenge1/src/app/app.component.html
+++ b/Challenge1/src/app/app.component.html
@@ -1,5 +1,4 @@
-<div style="max-width: 1440px; width: 100%; border: 1px solid black">
-
+<div style="width: 100%">
   <app-navbar></app-navbar>
   <app-editor></app-editor>
   <app-phones></app-phones>
