--- a/Challenge1/src/app/components/navbar/desktop-menu/desktop-menu.component.html
+++ b/Challenge1/src/app/components/navbar/desktop-menu/desktop-menu.component.html
@@ -2,9 +2,9 @@
   <div id="menu">
     <img src="assets/images/logo.svg" alt="logo">
     <div id="top-menu">
-      <app-list-item [listElement]="listStructure.get('Product')"></app-list-item>
-      <app-list-item [listElement]="listStructure.get('Company')"></app-list-item>
-      <app-list-item [listElement]="listStructure.get('Connect')"></app-list-item>
+      <app-menu-item-desktop [listElement]="listStructure.get('Product')"></app-menu-item-desktop>
+      <app-menu-item-desktop [listElement]="listStructure.get('Company')"></app-menu-item-desktop>
+      <app-menu-item-desktop [listElement]="listStructure.get('Connect')"></app-menu-item-desktop>
     </div>
   </div>
 
