--- a/Challenge1/src/app/components/navbar/mobile-menu/menu-modal/list-item/list-item-header/list-item-header.component.html
+++ b/Challenge1/src/app/components/navbar/mobile-menu/menu-modal/list-item/list-item-header/list-item-header.component.html
@@ -1,6 +1,8 @@
 <div id="header" (click)="openClose($event, this.isClosed)">
-  <h1 [ngClass]="!this.isClosed ? 'showColor' : ''">{{header}}</h1>
+  <h1 [hidden]="!dark" [ngClass]="!this.isClosed ? 'showColor' : ''">{{header}}</h1>
+  <h1 [hidden]="dark" style="color:white;" [ngClass]="!this.isClosed ? 'showColor' : ''">{{header}}</h1>
   <div>
-    <img src="assets/images/icon-arrow-dark.svg" alt="arrow" [ngClass]="!this.isClosed ? 'rotated' : ''">
+    <img [hidden]="!dark" src="assets/images/icon-arrow-dark.svg" alt="arrow" [ngClass]="!this.isClosed ? 'rotated' : ''">
+    <img [hidden]="dark"  src="assets/images/icon-arrow-light.svg" alt="arrow" [ngClass]="!this.isClosed ? 'rotated' : ''">
   </div>
 </div>
