--- a/Challenge5/src/app/pad/pad.component.html
+++ b/Challenge5/src/app/pad/pad.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <app-button symbol="RESET" [style.grid-area]="RESET" [style.background]="RED"></app-button>
+  <app-button symbol="RESET" [style.grid-area]="RESET"></app-button>
   <app-button symbol="=" [style.grid-area]="EQUAL"></app-button>
   <app-button symbol="7" [style.grid-area]="SEVEN"></app-button>
   <app-button symbol="8" [style.grid-area]="EIGHT"></app-button>
