--- a/Challenge5/src/app/pad/pad.component.css
+++ b/Challenge5/src/app/pad/pad.component.css
@@ -1,4 +1,5 @@
 .container {
+  padding: 20px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
@@ -7,4 +8,23 @@
   grid-column-gap: 20px;
   grid-row-gap: 20px;
   width: 30%;
+  border-radius: 10px;
+}
+
+.container > * {
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 4px 0px 0px #000000;
+  box-shadow: 0px 4px 0px 0px #000000;
+}
+
+
+.container > *:hover{
+  cursor: pointer;
+}
+
+.container > *:active{
+  transform: translateY(5px);
+  height: 75px;
+  -webkit-box-shadow: 0px 2px 0px 0px #000000;
+  box-shadow: 0px 2px 0px 0px #000000;
 }
