--- a/Challenge5/src/app/app.component.css
+++ b/Challenge5/src/app/app.component.css
@@ -6,3 +6,16 @@
   -ms-user-select: none; /* Internet Explorer/Edge */
   user-select: none;
 }
+
+.app{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calcWrapper{
+  width: 40%;
+  padding: 0 20px;
+}
