--- a/Challenge5/src/app/app.component.html
+++ b/Challenge5/src/app/app.component.html
@@ -1,3 +1,8 @@
-<h1>Welcom in calc</h1>
-<app-header></app-header>
-<app-pad></app-pad>
+<div class="app" [ngClass]="background">
+  <div class="calcWrapper">
+    <h1>Welcom in calc</h1>
+    <app-header></app-header>
+    <app-display></app-display>
+    <app-pad></app-pad>
+  </div>
+</div>
