switch, styles header

--- a/Challenge5/src/app/header/header.component.html
+++ b/Challenge5/src/app/header/header.component.html
@@ -1,1 +1,8 @@
-<app-toggler></app-toggler>
+<header [ngClass]="fontColor">
+  <div class="calc-title">
+    <h1>calc</h1>
+  </div>
+  <div class="togglerWrapper">
+    <app-toggler></app-toggler>
+  </div>
+</header>
