--- a/Challenge5/src/app/header/toggler/toggler.component.html
+++ b/Challenge5/src/app/header/toggler/toggler.component.html
@@ -1,2 +1,19 @@
-<button (click)="changeTheme()">change
-</button>
+<div class="wrapper">
+  <div class="row">
+    <div></div>
+    <div class="numbers">
+      <span>1</span>
+      <span>2</span>
+      <span>3</span>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="title">THEME</div>
+    <div class="toggler">
+      <app-switch></app-switch>
+    </div>
+  </div>
+</div>
+
+
