--- a/Challenge5/src/app/header/toggler/switch/switch.component.html
+++ b/Challenge5/src/app/header/toggler/switch/switch.component.html
@@ -1,3 +1,3 @@
-<div class="switch" (click)="changeTheme()">
-  <div class="ball"></div>
+<div class="switch" (click)="changeTheme()" [ngClass]="background">
+  <div class="ball" [ngClass]="position"></div>
 </div>
