--- a/Challenge5/src/app/header/toggler/switch/switch.component.css
+++ b/Challenge5/src/app/header/toggler/switch/switch.component.css
@@ -1,17 +1,16 @@
 .switch{
-  border: 1px solid black;
   width: 100%;
   height: 22px;
   border-radius: 10px;
   display: flex;
-  flex-direction: row;
   align-items: center;
-  padding: 0 5px;
+  padding: 2px 5px;
+  position: relative;
 }
 
 .ball{
-  border: 1px solid black;
   width: 20px;
   height: 18px;
   border-radius: 100%;
+  position: absolute;
 }
