--- a/Challenge5/src/app/header/toggler/toggler.component.html
+++ b/Challenge5/src/app/header/toggler/toggler.component.html
@@ -11,7 +11,7 @@
   <div class="row">
     <div class="title">THEME</div>
     <div class="toggler">
-      <app-switch></app-switch>
+      <app-switch [position]="togglerPosition" [background]="background"></app-switch>
     </div>
   </div>
 </div>
