--- a/Challenge5/src/app/header/toggler/toggler.component.html
+++ b/Challenge5/src/app/header/toggler/toggler.component.html
@@ -9,7 +9,7 @@
   </div>
 
   <div class="row">
-    <div class="title">THEME</div>
+    <span class="title">THEME</span>
     <div class="toggler">
       <app-switch [position]="togglerPosition" [background]="background"></app-switch>
     </div>
