--- a/Challenge5/src/app/header/toggler/switch/switch.component.css
+++ b/Challenge5/src/app/header/toggler/switch/switch.component.css
@@ -1,7 +1,7 @@
 .switch{
-  width: 100%;
   height: 22px;
-  border-radius: 10px;
+  border-radius: 20px;
+  border: 4px solid;
   display: flex;
   align-items: center;
   padding: 2px 5px;
