--- a/Challenge5/src/app/app.component.css
+++ b/Challenge5/src/app/app.component.css
@@ -6,7 +6,13 @@
   align-items: center;
 }
 
-.calcWrapper{
+.calcWrapper {
   width: 40%;
   padding: 0 20px;
+}
+
+@media (max-width: 1024px) {
+  .calcWrapper {
+    width: 90%;
+  }
 }
