--- a/Challenge5/src/app/display/display.component.css
+++ b/Challenge5/src/app/display/display.component.css
@@ -1,10 +1,18 @@
-div{
+div {
   height: 90px;
   width: content-box;
   margin-bottom: 20px;
   border-radius: 10px;
+  overflow: hidden;
   font-size: 50px;
   font-family: 'Spartan', sans-serif;
   text-align: right;
   padding: 30px 10px 0 10px;
+}
+
+@media (max-width: 512px) {
+  div {
+    font-size: 30px;
+    height: 60px;
+  }
 }
