buttons styles disabled and calc logic

--- a/Challenge5/src/app/pad/button/button.component.html
+++ b/Challenge5/src/app/pad/button/button.component.html
@@ -1,1 +1,1 @@
-<div (click)="onButtonClick()">{{symbol}}</div>
+<button (click)="onButtonClick()" [ngClass]="btnClass" [disabled]="isDisabled">{{symbol}}</button>
