--- a/Challenge5/src/app/pad/button/button.component.css
+++ b/Challenge5/src/app/pad/button/button.component.css
@@ -1,4 +1,4 @@
-div{
+button{
   font-size: 32px;
   font-family: 'Spartan', sans-serif;
 
@@ -8,6 +8,7 @@ div{
   width: 100%;
 
   border-radius: 10px;
+  border: none;
   display: flex;
   justify-content: center;
   align-items: center;
