--- a/Challenge5/src/app/pad/pad.component.html
+++ b/Challenge5/src/app/pad/pad.component.html
@@ -6,76 +6,91 @@
   <app-button symbol="0"
               [style.grid-area]="ZERO"
               [ngClass]="basic"
+              [btnClass]="basic"
   >
   </app-button>
   <app-button symbol="1"
               [style.grid-area]="ONE"
               [ngClass]="basic"
+              [btnClass]="basic"
   >
   </app-button>
   <app-button symbol="2"
               [style.grid-area]="TWO"
               [ngClass]="basic"
+              [btnClass]="basic"
   >
   </app-button>
   <app-button symbol="3"
               [style.grid-area]="THREE"
               [ngClass]="basic"
+              [btnClass]="basic"
   >
   </app-button>
   <app-button symbol="4"
               [style.grid-area]="FOUR"
               [ngClass]="basic"
+              [btnClass]="basic"
   >
   </app-button>
   <app-button symbol="5"
               [style.grid-area]="FIVE"
               [ngClass]="basic"
+              [btnClass]="basic"
   >
   </app-button>
   <app-button symbol="6"
               [style.grid-area]="SIX"
               [ngClass]="basic"
+              [btnClass]="basic"
   >
   </app-button>
   <app-button symbol="7"
               [style.grid-area]="SEVEN"
               [ngClass]="basic"
+              [btnClass]="basic"
   >
   </app-button>
   <app-button symbol="8"
               [style.grid-area]="EIGHT"
               [ngClass]="basic"
+              [btnClass]="basic"
   >
   </app-button>
   <app-button symbol="9"
               [style.grid-area]="NINE"
               [ngClass]="basic"
+              [btnClass]="basic"
   >
   </app-button>
   <app-button symbol="+"
               [style.grid-area]="ADD"
               [ngClass]="basic"
+              [btnClass]="basic"
   >
   </app-button>
   <app-button symbol="-"
               [style.grid-area]="SUBTRACT"
               [ngClass]="basic"
+              [btnClass]="basic"
   >
   </app-button>
   <app-button symbol="X"
               [style.grid-area]="MULTIPLY"
               [ngClass]="basic"
+              [btnClass]="basic"
   >
   </app-button>
   <app-button symbol="/"
               [style.grid-area]="DIVIDE"
               [ngClass]="basic"
+              [btnClass]="basic"
   >
   </app-button>
   <app-button symbol="."
               [style.grid-area]="DOT"
               [ngClass]="basic"
+              [btnClass]="basic"
   >
   </app-button>
 
@@ -83,11 +98,13 @@
   <app-button symbol="="
               [style.grid-area]="EQUAL"
               [ngClass]="strong"
+              [btnClass]="strong"
   >
   </app-button>
   <app-button symbol="DEL"
               [style.grid-area]="DELETE"
               [ngClass]="accent"
+              [btnClass]="accent"
   >
   </app-button>
 
@@ -96,6 +113,7 @@
   <app-button symbol="RESET"
               [style.grid-area]="RESET"
               [ngClass]="accent"
+              [btnClass]="accent"
   >
   </app-button>
 
