--- a/Challenge6/src/app/header/search/search.component.html
+++ b/Challenge6/src/app/header/search/search.component.html
@@ -1,1 +1,6 @@
-<p>search works!</p>
+<div [ngClass]="'container'">
+  <input type="text" #input [placeholder]="placeholderText" (keyup)="inputChange(input.value)">
+  <div [ngClass]="{'arrowBox':true, 'disabled':!isValid}">
+    <img src="assets/icon-arrow.svg" alt="arrow">
+  </div>
+</div>
