--- a/Challenge6/src/app/header/tab/tab.component.html
+++ b/Challenge6/src/app/header/tab/tab.component.html
@@ -1,1 +1,18 @@
-<p>tab works!</p>
+<div class="tab">
+  <div id="ipAddress" class="info">
+    <h4>ip address</h4>
+    <h2>192.168.0.1</h2>
+  </div>
+  <div id="location" class="info">
+    <h4>location</h4>
+    <h2>Brookly, NY</h2>
+  </div>
+  <div id="timezone" class="info">
+    <h4>timezone</h4>
+    <h2>UTC asd</h2>
+  </div>
+  <div id="isp" class="info">
+    <h4>isp</h4>
+    <h2>Spacex</h2>
+  </div>
+</div>
