--- a/Challenge6/src/app/header/header.component.css
+++ b/Challenge6/src/app/header/header.component.css
@@ -1,5 +1,6 @@
 div{
   border:1px solid black;
+  color: white;
   height: 30vh;
   background-image: url("../../assets/pattern-bg.png");
   background-repeat: no-repeat;
@@ -8,4 +9,8 @@ div{
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+h1{
+  margin-top: 20px;
 }
