--- a/Challenge6/src/app/header/tab/tab.component.html
+++ b/Challenge6/src/app/header/tab/tab.component.html
@@ -1,18 +1,18 @@
-<div class="tab">
+<div class="tab" *ngIf="data">
   <div id="ipAddress" class="info">
     <h4>ip address</h4>
-    <h2>192.168.0.1</h2>
+    <h2>{{data.ip}}</h2>
   </div>
   <div id="location" class="info">
     <h4>location</h4>
-    <h2>Brookly, NY</h2>
+    <h2>{{data.location.city}}, {{data.location.country}}</h2>
   </div>
   <div id="timezone" class="info">
     <h4>timezone</h4>
-    <h2>UTC asd</h2>
+    <h2>{{data.location.timezone}}</h2>
   </div>
   <div id="isp" class="info">
     <h4>isp</h4>
-    <h2>Spacex</h2>
+    <h2>UTC {{data.isp}}</h2>
   </div>
 </div>
