--- a/Challenge6/src/app/header/header.component.html
+++ b/Challenge6/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <div>
   <h1>IP Address Tracker</h1>
-  <app-search (ipInformation)="setData($event)"></app-search>
-  <app-tab [data]="data"></app-tab>
+  <app-search></app-search>
+  <app-tab></app-tab>
 </div>
