--- a/Challenge6/src/app/map/map.component.css
+++ b/Challenge6/src/app/map/map.component.css
@@ -1,9 +1,15 @@
-div{
+.map-container{
   width: 100%;
   height: 70vh;
   background: greenyellow;
-  border: 1px solid black;
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 1 !important;
+}
+
+#map {
+  height: 100%;
+  width: 100%;
+  z-index: 1 !important;
 }
