--- a/Challenge6/src/app/header/tab/tab.component.css
+++ b/Challenge6/src/app/header/tab/tab.component.css
@@ -14,7 +14,6 @@ div.tab{
   margin: -25px auto 0 auto;
 }
 
-
 div.tab > div {
   width: 25%;
   padding: 20px;
@@ -32,4 +31,34 @@ h4{
 h2{
   color: black;
   margin-top: 10px;
+}
+
+@media(max-width: 1000px){
+  div.tab{
+    font-size: 12px;
+    flex-direction: column;
+    width: 40vw;
+    height: auto;
+    background: rgba(255, 255, 255, 0.82);
+    padding: 5px 0;
+  }
+
+  div.tab > div {
+    width: 100%;
+    text-align: center;
+    box-sizing: border-box;
+    padding: 5px;
+  }
+
+  div.tab > div:not(div:first-child){
+    border-right: 0;
+    border-top: 2px solid hsla(0, 0%, 59%, 0.27);
+  }
+
+}
+
+@media(max-width: 900px){
+  div.tab{
+    width: 90vw;
+  }
 }
