--- a/Challenge6/src/styles.css
+++ b/Challenge6/src/styles.css
@@ -9,3 +9,8 @@ html, body, h1, h2, h3, h4, h5, h6 {
 body {
   font-family: 'Rubik', serif;
 }
+
+p {
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
