--- a/Challenge7/challenge7/src/index.css
+++ b/Challenge7/challenge7/src/index.css
@@ -1,6 +1,8 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
+
+body, h1,h2,h3,h4,h5,h6 {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Roboto Condensed', sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -18,4 +20,14 @@ code {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+}
+
+a{
+  color: black;
+  text-decoration: none;
+}
+
+a:visited{
+  color: black;
+  text-decoration: none;
 }
