--- a/Challenge7/challenge7/src/Styles/Modals/Modal.sass
+++ b/Challenge7/challenge7/src/Styles/Modals/Modal.sass
@@ -1,6 +1,3 @@
-div.Modal
-  position: fixed
-  left: 0
-  top: 0
-  width: 100px
-  height: 100px
+#modal-body
+  max-height: 500px
+  overflow: scroll
