--- a/Challenge7/challenge7/src/index.css
+++ b/Challenge7/challenge7/src/index.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
-
+@import url('bootstrap/dist/css/bootstrap.min.css');
 body, h1,h2,h3,h4,h5,h6 {
   margin: 0;
   font-family: 'Roboto Condensed', sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
