--- a/Challenge7/challenge7/src/index.css
+++ b/Challenge7/challenge7/src/index.css
@@ -31,3 +31,11 @@ a:visited{
   color: black;
   text-decoration: none;
 }
+
+* {
+  -webkit-touch-callout:none;
+  -webkit-user-select:none;
+  -moz-user-select:none;
+  -ms-user-select:none;
+  user-select:none;
+}
