css and organisation

--- a/Challenge7/challenge7/src/Styles/Card/ProfileLink.sass
+++ b/Challenge7/challenge7/src/Styles/Card/ProfileLink.sass
@@ -6,3 +6,7 @@ div.ProfileLink
   border-radius: 10px
   background: #1128b5
   color: white
+  @media(max-width: 1000px)
+    width: 110px
+    text-align: center
+    margin: 2px 0
