--- a/Challenge7/challenge7/src/Styles/Card/ProfileLink.sass
+++ b/Challenge7/challenge7/src/Styles/Card/ProfileLink.sass
@@ -1,12 +1,10 @@
 div.ProfileLink
-  border: 1px solid black
   letter-spacing: 1px
   font-weight: 500
   padding: 2px
-  border-radius: 10px
   background: #1128b5
   color: white
-  @media(max-width: 1000px)
-    width: 110px
+  @media(max-width: 600px)
+    width: 120px
+    height: 30px
     text-align: center
-    margin: 2px 0
