--- a/Challenge7/challenge7/src/App.css
+++ b/Challenge7/challenge7/src/App.css
@@ -26,3 +26,15 @@
   border: 1px solid black;
   padding: 0 10px;
 }
+
+@media(max-width: 600px){
+  .tools{
+    flex-direction: column;
+  }
+
+  .tools ul {
+    margin: auto;
+    width: 100%;
+  }
+}
+
