--- a/Challenge7/challenge7/src/Styles/Card/Card.sass
+++ b/Challenge7/challenge7/src/Styles/Card/Card.sass
@@ -1,15 +1,19 @@
+$desktop-height: 150px
+$mobile-height: 120px
+
 .Card
-  background: #9488db
+  background: #0466C8
+  color: white
   margin-top: 10px
+  height: $desktop-height
   display: flex
   flex-direction: row
   >*
     //border: 1px solid black
   .left
-    width: 30%
     img
-      width: 100%
-      height: 100%
+      width: $desktop-height
+      height: $desktop-height
   .right
     width: 100%
     display: flex
@@ -18,8 +22,34 @@
     padding: 20px
 .top
   letter-spacing: 2px
+  h1
+    color: white !important
+    overflow: hidden
+    word-break: break-word
+
 .bottom
   display: flex
   flex-direction: row
   justify-content: space-between
   align-items: center
+
+@media(max-width: 600px)
+  .Card
+    height: auto
+    margin-top: 0
+    border-bottom: 1px solid black
+    .left
+      img
+        width: $mobile-height
+        height: $mobile-height
+    .right
+      flex-direction: row
+      align-items: center
+      justify-content: space-between
+      padding: 0 0 0 5px
+    .bottom
+      flex-direction: column
+    .top
+      justify-content: center
+      h1
+        font-size: 1.5em
