--- a/Challenge7/challenge7/src/Styles/Search/Search.sass
+++ b/Challenge7/challenge7/src/Styles/Search/Search.sass
@@ -3,3 +3,8 @@
   padding: 10px
   border-radius: 0 0 20px 0
   background: #0073ff
+  @media(max-width: 500px)
+    width: 100%
+    border-radius: 0
+    display: flex
+    justify-content: center
