--- a/Challenge7/challenge7/src/Styles/Card/ProfileLink.sass
+++ b/Challenge7/challenge7/src/Styles/Card/ProfileLink.sass
@@ -2,9 +2,9 @@ div.ProfileLink
   letter-spacing: 1px
   font-weight: 500
   padding: 2px
-  background: #1128b5
   color: white
-  @media(max-width: 600px)
-    width: 120px
-    height: 30px
-    text-align: center
+  margin: 0 20px 0 0
+  img
+    width: 30px
+  @media(max-width: 400px)
+    width: 20px
