--- a/Challenge7/challenge7/src/Components/Header/Header.sass
+++ b/Challenge7/challenge7/src/Components/Header/Header.sass
@@ -1,10 +1,10 @@
 .Header
-  border-radius: 0 0 20px 0
   display: flex
   flex-direction: row
   align-items: center
   justify-content: space-between
-  padding: 20px 10px
-  background: #0073ff
+  padding: 20px
+  background: var(--header-bg)
+  color: var(--font)
   @media(max-width: 600px)
     border-radius: 0
