--- a/Challenge7/challenge7/src/index.css
+++ b/Challenge7/challenge7/src/index.css
@@ -1,46 +1,64 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
 @import url('bootstrap/dist/css/bootstrap.min.css');
-body, h1,h2,h3,h4,h5,h6 {
-  margin: 0;
-  font-family: 'Roboto Condensed', sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+
+html[data-theme='light'] {
+    --app-bg: #fed9b7;
+    --header-bg: #b62828;
+    --header-accent: #531010;
+    --card-bg: #fff;
+    --font: #1d2e3b
+}
+
+html[data-theme='dark'] {
+    --app-bg: #001d3d;
+    --header-bg: #003566;
+    --header-accent: #184eba;
+    --card-bg: #003566;
+    --font: #becfd9
+}
+
+
+body, h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+    font-family: 'Roboto Condensed', sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
-.temp-header{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
+.temp-header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
 }
 
-a{
-  color: black;
-  text-decoration: none;
+a {
+    color: black;
+    text-decoration: none;
 }
 
-a:visited{
-  color: black;
-  text-decoration: none;
+a:visited {
+    color: black;
+    text-decoration: none;
 }
 
 * {
-  -webkit-touch-callout:none;
-  -webkit-user-select:none;
-  -moz-user-select:none;
-  -ms-user-select:none;
-  user-select:none;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
-ul{
-  margin-block-start: 0;
-  margin-block-end: 0;
-  padding-inline-start: 0;
+ul {
+    margin-block-start: 0;
+    margin-block-end: 0;
+    padding-inline-start: 0;
 }
