--- a/Challenge7/challenge7/src/Search/Search.sass
+++ b/Challenge7/challenge7/src/Search/Search.sass
@@ -8,11 +8,17 @@
   align-items: center
   input
     height: 40px
+    border-radius: 20px 0 0 20px
+    padding: 0 0 0 10px
+    outline: 0
+    border: 0 !important
     @media(max-width: 600px)
       width: 100%
   button
     height: 40px
     border: none
+    border-radius: 0 20px 20px 0
+    padding: 0
     @media(max-width: 600px)
       width: 100px
   @media(max-width: 600px)
