--- a/Challenge7/challenge7/src/Search/Search.sass
+++ b/Challenge7/challenge7/src/Search/Search.sass
@@ -8,6 +8,9 @@
   align-items: center
   input
     height: 40px
+    min-width: 200px
+    background: var(--header-accent2)
+    color: var(--font)
     border-radius: 20px 0 0 20px
     padding: 0 0 0 10px
     outline: 0
@@ -16,6 +19,9 @@
       width: 100%
   button
     height: 40px
+    color: var(--font)
+    background: var(--header-accent)
+    min-width: 70px
     border: none
     border-radius: 0 20px 20px 0
     padding: 0
