--- a/Challenge4/challenge4/src/index.css
+++ b/Challenge4/challenge4/src/index.css
@@ -14,8 +14,7 @@ h1 {
 }
 
 code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
 a {
