--- a/Challenge7/challenge7/src/Modal/Modal.sass
+++ b/Challenge7/challenge7/src/Modal/Modal.sass
@@ -1,3 +1,21 @@
+#modal-header
+  background: var(--app-bg)
+  color: var(--font)
+  border-bottom: 1px solid var(--header-accent2)
+
 #modal-body
   max-height: 500px
-  overflow: scroll
+  min-height: 500px
+  overflow-y: scroll
+  overflow-x: hidden
+  background: var(--app-bg)
+  color: var(--font)
+  position: relative
+
+#modal-footer
+  background: var(--app-bg)
+  border-top: 1px solid var(--header-accent2)
+
+
+#modal-close-button
+  background: var(--header-accent)
