--- a/Challenge7/challenge7/src/App.sass
+++ b/Challenge7/challenge7/src/App.sass
@@ -37,9 +37,11 @@
 
 @media(max-width: 600px)
   .tools
-    flex-direction: column
+    height: 300px
+    display: flex
+    flex-direction: column !important
     border-radius: 0
     ul
-    width: 100%
-    margin: 10px auto 0 auto
+      width: 100%
+      margin: 10px auto 0 auto
 
