--- a/Challenge7/challenge7/src/SearchResults/FollowerCard/FollowerCard.sass
+++ b/Challenge7/challenge7/src/SearchResults/FollowerCard/FollowerCard.sass
@@ -1,12 +1,13 @@
 div.FollowerCard
-  border: 1px solid black
   display: flex
   flex-direction: row
   align-items: center
   border-radius: 80px 0 0 80px
   margin: 10px 0 10px 0
+  background: var(--header-accent)
+  color: var(--font)
   img
-    width: 30%
+    width: 20%
     border-radius: 100%
   h1
     margin-left: 20px
