styles and deploy

--- a/Challenge7/challenge7/src/SearchResults/RepoCard/RepoCard.sass
+++ b/Challenge7/challenge7/src/SearchResults/RepoCard/RepoCard.sass
@@ -1,5 +1,6 @@
 div.RepoCard
-  border: 1px solid black
+  border: 1px solid var(--font)
+  color: var(--font)
   margin: 10px 0
   .top
     display: flex
