--- a/Challenge7/challenge7/src/App.sass
+++ b/Challenge7/challenge7/src/App.sass
@@ -37,10 +37,9 @@
 
 @media(max-width: 600px)
   .tools
-    height: 300px
     display: flex
     flex-direction: column !important
-    border-radius: 0
+    border-radius: 0 !important
     ul
       width: 100%
       margin: 10px auto 0 auto
