--- a/Challenge7/challenge7/src/App.sass
+++ b/Challenge7/challenge7/src/App.sass
@@ -7,6 +7,8 @@
     max-width: 600px
     min-height: 100vh
     margin: auto
+    h1
+      letter-spacing: 2px
     .tools
       padding: 15px 20px
       display: flex
@@ -34,6 +36,26 @@
             width: 100%
             border-left: 2px solid var(--header-bg)
             padding: 0 10px
+
+.blur
+  width: 100vw
+  height: 100vh
+  display: flex
+  flex-direction: column
+  justify-content: center
+  align-items: center
+  position: fixed
+  left: 0
+  top: 0
+  backdrop-filter: blur(4px)
+  z-index: 2000
+  .LoginButton
+    margin: 200px 0 0 0
+    border: 1px solid var(--app-bg)
+    background: var(--header-accent2)
+    color: var(--font)
+    font-size: 1.2em
+    border-radius: 10px
 
 @media(max-width: 600px)
   .tools
