--- a/Challenge7/challenge7/src/Search/Search.sass
+++ b/Challenge7/challenge7/src/Search/Search.sass
@@ -6,6 +6,7 @@
   display: flex
   flex-direction: row
   align-items: center
+
   input
     height: 40px
     min-width: 200px
@@ -15,8 +16,20 @@
     padding: 0 0 0 10px
     outline: 0
     border: 0 !important
+
+    &::placeholder
+      color: var(--font)
+      opacity: 1
+
+    &:-ms-input-placeholder
+      color: var(--font)
+
+    &::-ms-input-placeholder
+      color: var(--font)
+
     @media(max-width: 600px)
       width: 100%
+
   button
     height: 40px
     color: var(--font)
@@ -27,6 +40,7 @@
     padding: 0
     @media(max-width: 600px)
       width: 100px
+
   @media(max-width: 600px)
     border-radius: 0
     display: flex
