--- a/Challenge7/challenge7/src/SearchResults/InformationCard/InformationCard.sass
+++ b/Challenge7/challenge7/src/SearchResults/InformationCard/InformationCard.sass
@@ -3,8 +3,19 @@
   flex-direction: column
   align-items: center
   justify-content: center
+  background: var(--header-accent)
+  border: 10px dashed var(--header-accent2)
+  padding: 20px 0
+  line-height: 25px
+  letter-spacing: 2px
+  width: 100%
   img
-    width: 90%
+    width: 60%
+    border-radius: 100%
+  .info
+    display: flex
+    flex-direction: column
   a
     color: var(--font)
-    border: 1px solid red
+    margin: auto
+    width: 100%
