--- a/Challenge7/challenge7/src/Utils/Logout/Logout.sass
+++ b/Challenge7/challenge7/src/Utils/Logout/Logout.sass
@@ -6,5 +6,8 @@
   display: flex
   align-items: center
   justify-content: center
+  transition: 0.3s
   &:hover
+    background: var(--header-accent)
     cursor: pointer
+    border: 1px solid var(--app-bg)
